--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,5 +1,12 @@
 @font-face {
   font-family: 'Lexend Deca';
+  src: url('@assets/fonts/LexendDeca-Light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
   src: url('@assets/fonts/LexendDeca-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
@@ -9,6 +16,13 @@
   font-family: 'Lexend Deca';
   src: url('@assets/fonts/LexendDeca-Medium.woff2') format('woff2');
   font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('@assets/fonts/LexendDeca-SemiBold.woff2') format('woff2');
+  font-weight: 600;
   font-style: normal;
 }
 
