--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,11 @@ body,
   height: 100%;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   background-color: #fafafa;
   font-family: 'Lexend Deca';
